--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,6 @@
 mensagem.invalida=Mensagem
+resource.not_found=Recurso n\u00e3o encontrado!
+
+recurso.operacao-nao-permitida=Opera\u00e7\u00e3o n\u00e3o permitida
+
+categoria.nome=Nome
